--- a/content/alecensa/en_us/hcp/alk-mnsclc-clinical-overview/1l-pfs.html
+++ b/content/alecensa/en_us/hcp/alk-mnsclc-clinical-overview/1l-pfs.html
@@ -198,227 +198,9 @@
                               </a>
                             </div>
 
-                            <div class="cmp-masthead__utility-nav__container">
-                              <div class="utilitynavigation">
-                                <div
-                                  class="cmp-masthead__utility-nav"
-                                  data-analytics-component="utilitynavigation"
-                                >
-                                  <div
-                                    class="
-                                      cmp-masthead__utility-nav-wrapper
-                                      content-container
-                                    "
-                                  >
-                                    <div
-                                      class="
-                                        cmp-masthead__utility-nav__vertical-center
-                                      "
-                                    >
-                                      <nav
-                                        class="cmp-masthead__utility-nav__items"
-                                        aria-label="Utility Navigation"
-                                      >
-                                        <a
-                                          href="../../../../../hcp/contact-a-representative.html"
-                                          target="_self"
-                                          class="
-                                            cmp-masthead__utility-nav-item
-                                            false
-                                          "
-                                          data-analytics='{\"component\":\"utilitynavigation\",\"destinationTitle\":\"Contact a Representative\",\"location\":\"masthead\",\"destinationURL\":\"/hcp/contact-a-representative.html\",\"type\":\"internal\"}'
-                                        >
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--desktop
-                                            "
-                                          >
-                                            Contact a Representative<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--mobile
-                                            "
-                                          >
-                                            Contact a Representative<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                        </a>
-
-                                        <a
-                                          href="../../../../../hcp/register.html"
-                                          target="_self"
-                                          class="
-                                            cmp-masthead__utility-nav-item
-                                            false
-                                          "
-                                          data-analytics='{\"component\":\"utilitynavigation\",\"destinationTitle\":\"Register for Updates\",\"location\":\"masthead\",\"destinationURL\":\"/hcp/register.html\",\"type\":\"internal\"}'
-                                        >
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--desktop
-                                            "
-                                          >
-                                            Register for Updates<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--mobile
-                                            "
-                                          >
-                                            Register for Updates<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                        </a>
-
-                                        <a
-                                          href="../../../../../hcp/alecensa-references.html"
-                                          target="_self"
-                                          class="
-                                            cmp-masthead__utility-nav-item
-                                            false
-                                          "
-                                          data-analytics='{\"component\":\"utilitynavigation\",\"destinationTitle\":\"References\",\"location\":\"masthead\",\"destinationURL\":\"/hcp/alecensa-references.html\",\"type\":\"internal\"}'
-                                        >
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--desktop
-                                            "
-                                          >
-                                            References<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--mobile
-                                            "
-                                          >
-                                            References<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                        </a>
-
-                                        <a
-                                          href="../../../../../download/pdf/alecensa_prescribing.pdf"
-                                          target="_blank"
-                                          class="
-                                            cmp-masthead__utility-nav-item
-                                            false
-                                          "
-                                          data-analytics='{\"component\":\"utilitynavigation\",\"destinationTitle\":\"Prescribing Information\",\"location\":\"masthead\",\"destinationURL\":\"https://www.gene.com/download/pdf/alecensa_prescribing.pdf\",\"type\":\"external\"}'
-                                        >
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--desktop
-                                            "
-                                          >
-                                            Prescribing Information<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--mobile
-                                            "
-                                          >
-                                            Prescribing Information<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                        </a>
-
-                                        <a
-                                          href="../../../../../hcp/safety.html"
-                                          target="_self"
-                                          class="
-                                            cmp-masthead__utility-nav-item
-                                            true
-                                          "
-                                          data-analytics='{\"component\":\"utilitynavigation\",\"destinationTitle\":\"Safety\",\"location\":\"masthead\",\"destinationURL\":\"/hcp/safety.html\",\"type\":\"internal\"}'
-                                        >
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--desktop
-                                            "
-                                          >
-                                            Safety<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                          <span
-                                            class="
-                                              cmp-masthead__utility-nav-item-text
-                                              cmp-masthead__utility-nav-item-text--mobile
-                                            "
-                                          >
-                                            Safety<i
-                                              class="
-                                                cmp-masthead__utility-nav-item-icon
-                                                fa
-                                                no-icon
-                                              "
-                                            ></i>
-                                          </span>
-                                        </a>
-                                      </nav>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
+                            <div
+                              class="cmp-masthead__utility-nav__container"
+                            ></div>
 
                             <div class="cmp-masthead__menu-button-container">
                               <button
